--- a/css/styles/global.sass
+++ b/css/styles/global.sass
@@ -15,12 +15,12 @@ body
 
 .content 
     position: relative
-    height: 100vh !important
-    width: 100% !important
+    // height: 100vh !important
+    // width: 100% !important
     margin: 0
     padding: 0
     position: relative
-    overflow-x: hidden
+    overflow: hidden
     z-index: -1
 
 .content-fade 
@@ -28,6 +28,7 @@ body
     animation-name: fade-in 
     animation-duration: 4s
     animation-fill-mode: forwards
+    overflow: scroll
 
     @keyframes fade-in
         0%
@@ -37,10 +38,11 @@ body
 
 .loading
     position: relative
-    height: 100% !important
+    height: 100vh !important
     width: 100% !important
     background: radial-gradient(50% 50% at 50% 50%, #FFFFFF 0%, #F3F8FA 100%)
     z-index: 2
+    overflow-y: hidden
     // height: auto
     // width: auto
     
